--- a/src/components/NavControls/style.module.css
+++ b/src/components/NavControls/style.module.css
@@ -1,7 +1,8 @@
 
 .navigationControls {
-    display: flex;
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navigationBtn {
