--- a/src/components/TodayButton/style.module.css
+++ b/src/components/TodayButton/style.module.css
@@ -1,12 +1,17 @@
 .todayButton {
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 10px;
+  font-size: 14px;
   background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 20px;
+  
+  @media screen and (min-width: 1200px) {
+    margin-top: 0px;
+    }
 }
 
 .todayButton:hover {
