--- a/src/components/UpcomingHolidays/style.module.css
+++ b/src/components/UpcomingHolidays/style.module.css
@@ -1,11 +1,18 @@
 
 .nextHolidays {
   flex: 1;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  
+  @media screen and (min-width: 1200px) {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    }
 }
 
 .nextHolidays h3 {
   margin: 0 0 8px 0;
-  font-size: 0.9em;
+  font-size: 12px;
   color: #666;
 }
 
@@ -16,7 +23,7 @@
 }
 
 .nextHolidays li {
-  font-size: 0.85em;
+  font-size: 12px;
   color: #444;
   margin-bottom: 4px;
 }
